# eigen_lgsm

./: .gitignore  CMakeLists.txt  EigenLgsmConfig.cmake.in  EigenLgsmConfigVersion.cmake.in  README.md
docs/: Doxyfile.in
test/: CMakeLists.txt  test_lgsm.cpp  test_nested.cpp
unsupported/Eigen/: CMakeLists.txt
unsupported/Eigen/src/: CMakeLists.txt
unsupported/Eigen/src/Lgsm/: CMakeLists.txt  LieAlgebra.h  LieAlgebra_so3.h  LieGroup_SE3.h  LieGroup_SO3.h
